added simple ui

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class=buttons>
+        <button id="rock" class="btn">Rock</button>
+        <button id="paper" class ="btn">Paper</button>
+        <button id="scissors" class="btn">Scissors</button>
+    </div>
+
+    <div id="container"></div>
     
     
 </body>
